force-app/main/default/objects/custom_create321__c/custom_create321__c.object-meta.xml
<CustomObject>
    <label>Custom created object321</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects321</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>