force-app/main/default/objects/custom_create321__c/fields/custom_create_321field513__c.field-meta.xml
<CustomField>
    <fullName>custom_create_321field513__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 321field513</label>
    <type>Checkbox</type>
</CustomField>